perf: reuse Java relation bind plans